# jupiter-lichee-zero

./: .gitignore  LIMITATIONS.md  Makefile  README.md  VortexEffect.lua
The_Secret_of_Monkey_Island_-_Complete_Soundtrack/: The Secret of Monkey Island - Complete Soundtrack.mid  The Secret of Monkey Island - Complete Soundtrack.txt  Tracklist.txt
Westwood - Dune II - MT32- Midi/Westwood - Dune II - MT32- Midi/: readme.txt
docs/: CEDARVE_AND_RETRO_PIPELINES.md  GAME_DEV_TRICK_BIBLE.md  GETTING_STARTED.md  HSTIMER_AND_HDMA.md  JUPITER_HARDWARE_REFERENCE.md  MIDI_HW_GUIDE.md  PIN_OVERLAYS.md  SEGA_JUPITER_HARDWARE_REFERENCE.md  SHOPPING_LIST.md  UBOOT_SPL_GUIDE.md  VGM_ASSETS.md  WIRING_GUIDE.md
docs/devlog/: GENESIS_MIDI_MODULE.md  HANDOFF.md  LRADC_GAMEPAD_IDEA.md  MT32_AUDIO_STATUS.md  PROGRESS.md  README.md  V3S_HARDWARE_SECRETS.md  V3S_HARDWARE_STATUS.md  YM3438_CRYSTAL_CLOCK.md
docs/ports/: README.md  WC1_BUILD_GUIDE.md  WC1_PORT_AUDIT.md  (+1 more)
emulator/: .gitignore  CHANGELOG.md  README.md
include/: cpak.h  cpakfs.h  gb.h  genesis.h  hstimer.h  input.h  jupiter.h  midi.h  nes.h  nuked_sc55.h  pmu.h  sdmmc.h  snes.h  v3s.h
jupiter-pico/: CMakeLists.txt  README.md
jupiter-pico/pio/: csi_out.pio
jupiter-pico/src/: dvi_out.c  mars_raster.c
jupiter-pico/v3s_side/: mars_csi_capture.h
lib/: audio.c  cedar.c  cedar_enc.c  cpak.c  cpakfs.c  cpp_runtime.cpp  gb.c  genesis.c  genesis_asm.S  hstimer.c  input.c  irq.c  libc_shim.c  mem.c  midi.c  mmu.c  mode7_neon.S  mt32_lut_dump.cpp  mt32_math_shim.c  n64_joybus.c  n64_joybus.h  nes.c  nuked_opn2_shim.c  nuked_sc55_driver.cpp  nuked_sc55_lcd_stub.cpp  sdmmc.c  si5351.c  snes.c  sprite.c  sprite_neon.S  sram.c  tiles.c  tiles_neon.S  timer.c  uart.c  video.c  ym3438_hw.c
libvgm/: nes_debug.h  vgm_player.c  vgm_player.h
mercury/: CMakeLists.txt  README.md
mercury/include/: jupiter32x.h
mercury/src/: csi_out.c  dvi_out.c  mars_displaylist.c  mars_main.c  mars_raster.c  mars_spi.c  mercury_main.c  mercury_spi.c
mercury/v3s_side/: mars_csi_capture.h  mercury_csi_capture.h
scripts/: boot.cmd  gen_midi_catalog.py  jupiter.ld  rom_to_header.py  sd_pack_music.py  sd_write_music.ps1  start.S  war1_assets.py  war1_convert.py  war1_embed_lua.py  war1_sounds.py  wc1_video_pack.py  wc1_videos_convert.py
template/: game.c
tools/: celebi.argb  ff6soldier.argb  h264_template_448x928.h  h264_template_512x480.h  pulseman.argb  pulseman.h264  test.h264  ve_full_test.c  ve_probe.c  vinci.argb
(+265 files in other folders)
